tests/snapshots/integration_test__string_methods_with_builtins.snap
---
source: tests/integration_test.rs
expression: output
---
fn getLength(s: String) -> f64 {
    s.len() as f64
}

fn checkPrefix(s: String) -> bool {
    s.starts_with("hello")
}

fn normalize(s: String) -> String {
    s.trim().to_string().to_lowercase()
}

fn replaceChar(s: String) -> String {
    s.replacen("a", "b", 1)
}

fn hasContent(s: String) -> bool {
    s.contains(&"x") && !s.ends_with("z")
}

fn shout(s: String) -> String {
    s.to_uppercase()
}
