tests/snapshots/integration_test__ternary_union.snap
---
source: tests/integration_test.rs
expression: output
---
#[derive(Debug, Clone, PartialEq)]
pub enum F64OrString {
    String(String),
    F64(f64),
}

fn getStringOrNumber(flag: bool) -> F64OrString {
    if flag { "hello" } else { 42.0 }
}

fn getEitherString(flag: bool) -> String {
    if flag { "yes".to_string() } else { "no".to_string() }
}
