tests/snapshots/integration_test__test_array_destructuring_unsupported.snap
---
source: tests/integration_test.rs
expression: json
---
[
  {
    "kind": "unsupported pattern: expected identifier",
    "location": "28:1"
  }
]
