tests/snapshots/integration_test__test_callable_interface_unsupported.snap
---
source: tests/integration_test.rs
expression: json
---
[
  {
    "kind": "unsupported interface member (only property signatures are supported)",
    "location": "13:1"
  }
]
