tests/snapshots/integration_test__test_class_inheritance_unsupported.snap
---
source: tests/integration_test.rs
expression: json
---
[
  {
    "kind": "unsupported call target expression",
    "location": "43:1"
  }
]
